--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-rvm:
+before_install:
+    - gem install rubygems-update -v2.1.11
+    - gem update --system 2.1.11
+    - gem --version
+ rvm:
     - "2.0.0"
     - "1.9.3"
     - "1.8.7"
